# VAN311

./: .gitignore  LICENSE  README.md  database.py  models.py  requirements.txt  seed_database.py
.github/workflows/: python-app.yml
backend/: Makefile  pyproject.toml
backend/data/: vancouver.db-shm  vancouver.db-wal
backend/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
backend/scripts/: setup.py
backend/src/van311/: database.py  main.py
backend/src/van311.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/van311/db/: aggregation.py  core.py  db_init.py  metrics.py  router_queries.py  seeding.py  update_data.py  updates.py
backend/src/van311/ingestion/: fetch_requests.py
backend/src/van311/jobs/: scheduler.py
backend/src/van311/models/: api_models.py  service_request.py
backend/src/van311/routers/: data.py  metrics.py
backend/src/van311/tasks/data_gathering/: update_data.py
backend/src/van311/utils/: dates.py
backend/tests/: conftest.py
backend/tests/unit/: unit_api_logic_test.py  unit_api_test.py  unit_core_database_test.py  unit_database_test.py  unit_ingestion_test.py  unit_metrics_test.py  unit_models_test.py  unit_seed_db_test.py  unit_seeding_test.py  unit_tasks_test.py  unit_update_data_test.py  unit_updates_test.py  unit_utils_test.py
scripts/: seed_db.py  update_data.py
tests/: conftest.py  test_database.py
tests/unit/: unit_api_logic_test.py  unit_background_jobs_test.py  unit_database.py  unit_database_test.py  (+3 more)
van311/: .gitignore  api.py  database.py  main.py  models.py  seed_database.py
