[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "van311"
version = "0.1.0"
description = "Backend for the van311 project"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.11.1",
    "certifi",
    "charset-normalizer",
    "fastapi[standard]>=0.122.0",
    "idna",
    "iniconfig",
    "packaging",
    "pluggy",
    "pygments",
    "pytest",
    "python-dateutil",
    "requests",
    "six",
    "tqdm",
    "urllib3",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.workspace]
members = ["."]
